--- a/Develop/index.html
+++ b/Develop/index.html
@@ -38,7 +38,7 @@
             </p>
         </div>
         <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="A person holding a cellphone while in front of a laptop with a screen reading Reputation and a bar graph trending upwards"/>
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="A person holding a cellphone while in front of a laptop with a screen reading Reputation and a bar graph trending upwards" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
@@ -56,26 +56,28 @@
     <aside class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="A half-gear icon with an arrow pointing downwards to a dollar sign" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="A lightbulb with curved lines around it icon wearing a shirt and tie" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <div class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="A gear icon surrounded by dollar sign icons"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
     </aside>
+
+    <!-- Footer -->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
