add css comments and rmv dupe code

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon</title>
+    <title>Horiseon | Search Engine Optimization, Online Reputation Management, and Social Media Marketing</title>
 </head>
 
 <body>
     <!-- Site Header -->
-    <header class="header">
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <!-- Navigation Anchors -->
         <nav>
@@ -29,46 +29,46 @@
     <!-- Hero Section -->
     <section class="hero"></section>
     <!-- Content Section -->
-    <div class="content">
-        <div id="search-engine-optimization" class="search-engine-optimization">
+    <section class="content">
+        <article id="search-engine-optimization" class="search-engine-optimization about-content">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="A notebook on a desk with the word SEO outlined in a cloud surrounded by the following words in clockwise order: Content, Headings, Mobile Compatibility, Social Media, Link Building, and Backlink" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="online-reputation-management">
+        </article>
+        <article id="online-reputation-management" class="online-reputation-management about-content">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="A person holding a cellphone while in front of a laptop with a screen reading Reputation and a bar graph trending upwards" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="social-media-marketing">
+        </article>
+        <article id="social-media-marketing" class="social-media-marketing about-content">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Multiple hands around a table with laptops and tablets surrounded by talk bubbles with the words Like, Share, Tweet, and Media" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </div>
+        </article>
+    </section>
     <!-- Benefits Section -->
     <aside class="benefits">
-        <div class="benefit-lead">
+        <div class="benefit-lead margin-bottom">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="A half-gear icon with an arrow pointing downwards to a dollar sign" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit-brand margin-bottom">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="A lightbulb with curved lines around it icon wearing a shirt and tie" />
+            <img src="./assets/images/brand-awareness.png" alt="A lightbulb icon with curved lines around it wearing a shirt and tie" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefit-cost margin-bottom">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="A gear icon surrounded by dollar sign icons"></img>
             <p>
